apps/workloads/media/posterizarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posterizarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: posterizarr
  template:
    metadata:
      labels:
        app: posterizarr
        networking/expose-web-ui: "true"
    spec:
      dnsPolicy: None
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        supplementalGroups:
          - 6
      dnsConfig:
        searches:
          - iot.svc.cluster.local
          - svc.cluster.local
          - cluster.local
        nameservers:
          - 10.96.0.10
        options:
          - name: ndots
            value: "5"
      terminationGracePeriodSeconds: 30
      containers:
        - name: posterizarr
          image: ghcr.io/fscorrupt/posterizarr
          ports:
            - name: web-ui
              containerPort: 8000
          volumeMounts:
            - name: media
              subPath: assets
              mountPath: /assets
            - name: config
              mountPath: /config
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    if [ ! -f /config/Overlayfiles/gradient_poster_overlay-rgba-0.7.png ]; then
                      unzip -q -o /app/Overlayfiles/gradient_background_poster_overlays.zip -d /config/Overlayfiles
                    fi
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: posterizarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: fonts
          persistentVolumeClaim:
            claimName: fonts-pvc
        - name: app-config-tpl-volume
          configMap:
            name: posterizarr-configmap
            items:
              - key: config.json.template
                path: config.json.template
        - name: posterizarr-secret-volume
          secret:
            secretName: posterizarr-secret
