apps/workloads/media/posterizarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posterizarr
spec:
  selector:
    app: posterizarr
  ports:
    - name: web-ui
      port: 8000
