apps/workloads/media/posterizarr/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: posterizarr-policy
spec:
  endpointSelector:
    matchLabels:
      app: posterizarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: web-ui
              protocol: "TCP"
  # ----=== Egress ===----
  egress:
    # === Allow DNS ===
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: "UDP"
            - port: "53"
              protocol: "TCP"
    # === Allow access to services ===
    - toServices:
        - k8sService:
            serviceName: plex-ui
            namespace: media
    # === Allow access to external for metadata ===
    - toEntities:
        - "world"
      toPorts:
        # Only allow HTTP/S for indexers
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
            - port: "80"
              protocol: TCP
